implement gpt fast path
